--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   "scripts": {
     "test": "jest"
   },
+  "jest":{
+    "reporters":["default", "jest-junit"]
+  },
   "license": "ISC",
   "devDependencies": {
     "jest": "^25.1.0"
