--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,10 +15,22 @@ jobs:
           - v1-dependencies-
 
       - run: yarn install
-
+      
       - save_cache:
           paths:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
         
-      - run: yarn test
+      - run:
+          name: Install JUnit coverage reporter
+          command: yarn add --dev jest-junit
+      - run:
+          name: Run tests with JUnit as reporter
+          command: npx jest --ci --runInBand --reporters=default --repoters=jest-junit
+          enviroment:
+            JEST_JUNIT_OUTPUT_DIR: "./junit/test-results.xml"
+          when: always
+      - store_test_results:
+          path: ./junit
+      - store_artifacts:
+          path: ./junit
