--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
           - v1-dependencies-
 
       - run: yarn install
-      
+
       - save_cache:
           paths:
             - node_modules
@@ -26,7 +26,7 @@ jobs:
           command: yarn add --dev jest-junit
       - run:
           name: Run tests with JUnit as reporter
-          command: npx jest --ci --runInBand --reporters=default --repoters=jest-junit
+          command: npx jest --ci --runInBand --reporters=default --reporters=jest-junit
           enviroment:
             JEST_JUNIT_OUTPUT_DIR: "./junit/test-results.xml"
           when: always
